[package]
name = "rusty-can"
version = "0.1.0"
authors = ["Conroy Cheers <conroy@conroycheers.me>"]
edition = "2021"

[dependencies]
nb = "1"
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
cortex-m-rtic = "1.1.2"
panic-halt = "0.2.0"
rtic-monotonic = { version = "1.0", optional = true }
stm32f4xx-hal = { version = "0.13.2", features = ["stm32f446", "rtic"] }
heapless = "0.7.13"

[dev-dependencies]
cortex-m-semihosting = "0.3.3"

[features]
usb_fs = ['stm32f4xx-hal/usb_fs']
usb_hs = ['stm32f4xx-hal/usb_hs']

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[[bin]]
name = "slcan"
path = "src/main.rs"
test = false
bench = false
